@@ -1,3 +1,9 @@
+2013-12-10  Kai Tietz  <ktietz@redhat.com>
+
+	PR target/56807
+	* config/i386/i386.c (ix86_expand_prologue): Address saved
+	registers stack-relative, not via frame-pointer.
+
 2013-12-10  Richard Biener  <rguenther@suse.de>
 
 	PR middle-end/38474
